re PR gcov-profile/49299 (ICE in gimple_ic on profile feedback build)

PR gcov-profile/49299
	* value-prof.c (gimple_ic): Don't assume icall has
	a fallthru edge.

	* gcc.dg/tree-prof/pr49299-1.c: New test.
	* gcc.dg/tree-prof/pr49299-2.c: New test.

From-SVN: r174739